Bug 253678 - Unprecise error message when creating symlink on partition that does not support that
Summary: Unprecise error message when creating symlink on partition that does not supp...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.47.0
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2010-10-09 17:22 UTC by Kai Uwe Broulik
Modified: 2021-08-12 10:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.86
Sentry Crash Report:


Attachments
Error message displayed (german) (14.96 KB, image/png)
2010-10-09 17:22 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2010-10-09 17:22:48 UTC
Created attachment 52372 [details]
Error message displayed (german)

Version:           SVN
OS:                Linux

If you want to create a symlink on a partition/filesystem that does not support it (e.g. a FAT32 usb stick) you end up with an error “Cannot create link. Check your permissions”. It is correct that it cannot create one but it‘s because the file system does not support that.
If it is certainly known that the filesystem does not support symbolic links (NTFS does but in a different way while FAT does not) then say so.

(Also this dialog box lacks an error icon and stuff)

Reproducible: Always
Comment 1 Ahmad Samir 2021-08-12 10:01:26 UTC
Git commit c27196acc33243db1da847a43a63f3442b261688 by Ahmad Samir.
Committed on 12/08/2021 at 09:59.
Pushed by ahmadsamir into branch 'master'.

kio_file: detect failure to create symlinks due to filesystem support

The symlink() system call sets errno to EPERM (operation not permitted)
when the filesystem doesn't support symlinks; check the filesystem type
so that we can show a better error message.
FIXED-IN: 5.86

M  +26   -7    src/ioslaves/file/file_unix.cpp

https://invent.kde.org/frameworks/kio/commit/c27196acc33243db1da847a43a63f3442b261688