kio_file: don't try creating symlinks if the filesystem doesn't support it

And show a better error message.

BUG: 253678
FIXED-IN: 5.85